--- a/kraken.html
+++ b/kraken.html
@@ -126,9 +126,13 @@
     <a href="https://www.mediafire.com/file/fpml7tqkcvgptz4/BorisFXSapphirePlug-insforOFX2024.0.2x64.7z/file">
       <img
         src="https://cdn.discordapp.com/attachments/1191860713313009736/1191860713912811751/boris_fx_bccae1000_continuum_complete_10_for_1209833.jpg?ex=65a6f9c9&is=659484c9&hm=b2313ae49075f6eeee9ad85bd858fb534f7f0430b672dc5fee616c1a7df9ae0b&"></a>
-        <a href="https://9saves.com/hm7tqyaank3f/Softprober.com_Xfer_Records_Serum_SerumFX_v1.3.5b7_b8_mac.rar.html">
-          <img
-            src="https://cdn.discordapp.com/attachments/969840354541043753/1196666840022265926/image.png?ex=65b875d7&is=65a600d7&hm=83eab69a55d4e9b533e00efddea988f16b121ad64188ce42657a60ad1d3f82da&"></a>
+    <a href="https://9saves.com/hm7tqyaank3f/Softprober.com_Xfer_Records_Serum_SerumFX_v1.3.5b7_b8_mac.rar.html">
+      <img
+        src="https://cdn.discordapp.com/attachments/969840354541043753/1196666840022265926/image.png?ex=65b875d7&is=65a600d7&hm=83eab69a55d4e9b533e00efddea988f16b121ad64188ce42657a60ad1d3f82da&"></a>
+        <img src="https://cdn.discordapp.com/attachments/1191860713313009736/1191860713912811751/boris_fx_bccae1000_continuum_complete_10_for_1209833.jpg?ex=65a6f9c9&is=659484c9&hm=b2313ae49075f6eeee9ad85bd858fb534f7f0430b672dc5fee616c1a7df9ae0b&"></a>
+    <a href="https://br0wsers.com/blog/detail/ignite-pro-2208-15408.html">
+      <img
+        src="https://cdn.discordapp.com/attachments/1221725947292684299/1221725947821293628/FXHome-Ignite-Pro-Discounts.jpg?ex=66139ff4&is=66012af4&hm=54f9e80a5245e13369497b27e1d0a24a2709e6324530f8a7c759b0a8599bb716&"></a>
     <hr>Universial cracks
     <hr>
     <a href="https://1cloudfile.com/folder/4c59d566933229eec94ef311a39cb79f/Adobe_Master_Collection_2024_v3">
