Changes is happening

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <div class="title">
       <h1></h1>
       <div class="back-text">
-        <span>A</span>
-        <span>t</span>
-        <span>h</span>
-        <span>e</span>
-        <span>n</span>
+        <span>H</span>
         <span>a</span>
+        <span>n</span>
+        <span>d</span>
+        <span>i</span>
       </div>
     </div>
   </div>
@@ -39,7 +38,7 @@
   <div class="navbar">
     <div data-role="navbar">
       | + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - + |
-      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> About Athena</a>
+      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> About handicraft</a>
       | - - - - - - - - - - - - - - Projects - - - - - - - - - - - - - - |
       <a href="https://scythnentic.6ph1nx1s4.repl.co/"><i class="fa fa-fw fa-user"></i> Scythnentic (Old)</a>
       <a href="kraken.html"><i class="fa fa-fw fa-user"></i> Kraken</a>
