--- a/aboutme.html
+++ b/aboutme.html
@@ -41,10 +41,8 @@
     <p>⚧️ Pronouns - She/Her</p>
     <p>🎂 Birthday - Jan 5th</p>
     <p>🌎 Language - C#, Lua, Unity, Html, CSS, Python, C++ (Only a lil)</p>
-    <p>📝 All about Athena - :P Silly bitch! Silly bitch! Silly bitch! Silly bitch! Silly bitch! Silly bitch!</p>
-    <p>❓ Athena, also spelled Athene, in Greek religion, the city protectress, goddess of war, handicraft, and practical
-      reason, identified by the Romans with Minerva. She was essentially urban and civilized, the antithesis in many
-      respects of Artemis, goddess of the outdoors.</p>
+    <p>📝 All about handicraft - :P Silly bitch! Silly bitch! Silly bitch! Silly bitch! Silly bitch! Silly bitch!</p>
+    <p>❓ hand·​i·​craft ˈhan-di-ˌkraft. 1. : an occupation (as weaving or pottery making) requiring skill with the hands. 2. : articles made by one working at a handicraft.</p>
   </div>
 
   <h2 style="text-align:center">My Socials</h2>
