--- a/kraken.html
+++ b/kraken.html
@@ -72,7 +72,7 @@
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9XnP9Pf-24Bgiamyh18CdWp2LnurMGT1s-A&usqp=CAU"></a>
 
-    <a href="https://download2364.mediafire.com/zmeejcv1eokgysUU_Rvg2dyEyWhFUvzRl6Bn4A55h0vpOvKBDtahlBiQjKC3zpu3d9iiR-3iKkYdKRVMx85HPh1Tu57hPba6offDGWDfn4MGRsTH462Cm8oT5PeCFr0qm6TVwwysmXrARMIagvB-wpcqDoNWE_lPRRs5UefNw_xq/o8kmzofy5kj0lnv/Ableton+Live+11+Suite+v11.3.21+WIN.rar"></a>
+    <a href="https://download2364.mediafire.com/zmeejcv1eokgysUU_Rvg2dyEyWhFUvzRl6Bn4A55h0vpOvKBDtahlBiQjKC3zpu3d9iiR-3iKkYdKRVMx85HPh1Tu57hPba6offDGWDfn4MGRsTH462Cm8oT5PeCFr0qm6TVwwysmXrARMIagvB-wpcqDoNWE_lPRRs5UefNw_xq/o8kmzofy5kj0lnv/Ableton+Live+11+Suite+v11.3.21+WIN.rar">
       <img
         src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiT9DN58AfKBNJG9id5TOTI8PGQE4EvKo4GW-Lz9WPZ3TBDxipW1XMx2sMJplZJoh-uajgim_Y5ACq2V2NJKJSaloheqBJ1zcwOL1xzIM-DCeWyUI_FLE4bDknzFok9MlflopnT0l-crfjkPjOWoHb1UBRIynQz8Z2OJ2DVJdsZjYJEOP5dHGzDspnS/s256/Ableton%20Live%20Suite%20for%20windows.png"></a>
 
@@ -83,11 +83,11 @@
 
   <hr>Video Editoid Crakeroidzz<hr>
   <div class="button">
-    <a href="https://pixeldrain.com/u/Pfnpp2qV">
+    <a href="https://cloud.mail.ru/public/dj2h/TcaDJXupC">
       <img
         src="https://2.bp.blogspot.com/-fK5xNcVFgt4/YDj3vHd_-dI/AAAAAAAAcWU/DWBsg2GFp0A8HQbrzkNrsJfRosLaPm_nQCLcBGAsYHQ/s256/DaVinci%2BResolve%2BStudio%2BFull%2Bversion.png"></a>
 
-    <a href="https://www.mediafire.com/file/6dt40fxfv4s4pm5/TopazVideoAI4.0.8x64.7z/file">
+    <a href="https://filenext.org/7c4a960d6e565029?ref=f624298ec9f7ff0a46b6103e7187dc9c">
       <img
         src="https://2.bp.blogspot.com/-srHme3hnvCk/XzVG6gEIAcI/AAAAAAAAY84/NbYBmBsR95YUzNqfGAMGIZRZ5yNHzLveACLcBGAsYHQ/s1600/Topaz%2BVideo%2BEnhance%2BAI%2BFull%2Bversion.png"></a>
         
@@ -99,7 +99,7 @@
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpICSHUYwazcRjUi6Sfbzhww2zVFgAXRCJiqXjLtSUWFgB-4WHhcnqJiEX7nBzWju3aVc&usqp=CAU"></a>
 
-    <a href="https://4g8g8m-my.sharepoint.com/personal/resource_4g8g8m_onmicrosoft_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fresource%5F4g8g8m%5Fonmicrosoft%5Fcom%2FDocuments%2F%E6%AA%94%E6%A1%88%2FAdobe%2FPremiere%20Pro%2FAdobe%20Premiere%20Pro%202022%2F%E4%B8%AD%E6%96%87%2FAdobe%20Premiere%20Pro%202022%2Ezip&parent=%2Fpersonal%2Fresource%5F4g8g8m%5Fonmicrosoft%5Fcom%2FDocuments%2F%E6%AA%94%E6%A1%88%2FAdobe%2FPremiere%20Pro%2FAdobe%20Premiere%20Pro%202022%2F%E4%B8%AD%E6%96%87&ga=1">
+    <a href="https://zeroupload.com//d2bdef4ad22d27510139e414f3e99a51">
       <img
         src="https://www.adobe.com/content/dam/acom/one-console/icons_rebrand/pr_appicon.svg"></a>
         
@@ -118,7 +118,7 @@
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO1SlRSel6VlF_v99WTx7Zh-04t1n15seMaeyKnXtgXw&s"></a>
 
-    <a href="https://filecr.com/file-download/?id=232201613000#">
+    <a href="https://s1-filecr.xyz/617bc268693eba9c?ref=3d0100b91c341ea206cbb2e83d47f73d">
       <img
         src="https://helpcenter.celemony.com/M5/assets/images/celemony_logo.png"></a>
 
