--- a/kraken.html
+++ b/kraken.html
@@ -87,7 +87,7 @@
       <img
         src="https://2.bp.blogspot.com/-fK5xNcVFgt4/YDj3vHd_-dI/AAAAAAAAcWU/DWBsg2GFp0A8HQbrzkNrsJfRosLaPm_nQCLcBGAsYHQ/s256/DaVinci%2BResolve%2BStudio%2BFull%2Bversion.png"></a>
 
-    <a href="https://filenext.org/7c4a960d6e565029?ref=f624298ec9f7ff0a46b6103e7187dc9c">
+    <a href="https://www.mediafire.com/file/eu94krue4g7dsfh/topaz_vai_models_352+.dlc/file">
       <img
         src="https://2.bp.blogspot.com/-srHme3hnvCk/XzVG6gEIAcI/AAAAAAAAY84/NbYBmBsR95YUzNqfGAMGIZRZ5yNHzLveACLcBGAsYHQ/s1600/Topaz%2BVideo%2BEnhance%2BAI%2BFull%2Bversion.png"></a>
         
