Update (mainpage not kraken)
kraken  after alr?

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
     <div class="title">
       <h1></h1>
       <div class="back-text">
-        <span>H</span>
+        <span>V</span>
         <span>a</span>
-        <span>n</span>
-        <span>d</span>
-        <span>i</span>
+        <span>l</span>
       </div>
     </div>
   </div>
@@ -38,7 +36,7 @@
   <div class="navbar">
     <div data-role="navbar">
       | + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - + |
-      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> About handicraft</a>
+      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> About Valhallium</a>
       | - - - - - - - - - - - - - - Projects - - - - - - - - - - - - - - |
       <a href="https://scythnentic.6ph1nx1s4.repl.co/"><i class="fa fa-fw fa-user"></i> Scythnentic (Old)</a>
       <a href="kraken.html"><i class="fa fa-fw fa-user"></i> Kraken</a>
