--- a/kraken.html
+++ b/kraken.html
@@ -68,7 +68,7 @@
 
   <hr>Musicianal Crackeroids<hr>
   <div class="button">
-    <a href="https://icedrive.net/s/ab4w2i71X89jhBvzPTytNzgxBvyy">
+    <a href="https://sn.dl-faster.xyz/ref/ANAozoeVVd?cod=BiXiAAhoiz&ref=SW1hZ2VMaW5lRkxTdHVkaW9Qcm9kdWNlckVkaXRpb24yMS4yLjNCdWlsZDQwMDQueDY0LmcudGFpd2Vicy5jb20uemlw">
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9XnP9Pf-24Bgiamyh18CdWp2LnurMGT1s-A&usqp=CAU"></a>
 
