--- a/kraken.html
+++ b/kraken.html
@@ -118,7 +118,7 @@
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO1SlRSel6VlF_v99WTx7Zh-04t1n15seMaeyKnXtgXw&s"></a>
 
-    <a href="https://ice-us-wdc-621142.icedrive.io/download?p=QxreBOV.L7FkfXXJdSGnoMH9Ff._5jx2cyGaom35SMG1BBzu_q79icWTtVUOuD27MCqc7P4XN8DyHEHi6vYaIeGS7gdLEbBn4sxBE6WR8LZeJrFYcPpUOgWlL7AChCgaHZo_kd1qhUYb53bDxXjdxDc8ODts13DtfaVpLuNX3Bfm9pfTzXqRRKmtc13tindiTW_kLzO87u5ND_35tsqUlO3Rgn8I.l3pCKA9bQc.CxPrtQRA3e23lJt22jQu81k4oqqwTNCcKXRHdnLth9cCBQ--">
+    <a href="https://icedrive.net/s/wi21PbCWu5Yfy74b26ja66ai4g9R">
       <img
         src="https://helpcenter.celemony.com/M5/assets/images/celemony_logo.png"></a>
 
