--- a/kraken.html
+++ b/kraken.html
@@ -83,7 +83,7 @@
 
   <hr>Video Editoid Crakeroidzz<hr>
   <div class="button">
-    <a href="https://cloud.mail.ru/public/dj2h/TcaDJXupC">
+    <a href="https://s2-download.xyz/531d1e670ddb1fe5?ref=6aafd6c44639378d35b109b60fb963a6">
       <img
         src="https://2.bp.blogspot.com/-fK5xNcVFgt4/YDj3vHd_-dI/AAAAAAAAcWU/DWBsg2GFp0A8HQbrzkNrsJfRosLaPm_nQCLcBGAsYHQ/s256/DaVinci%2BResolve%2BStudio%2BFull%2Bversion.png"></a>
 
