--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
   <div class="navbar">
     <div data-role="navbar">
       | + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - + |
-      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> About Valhallium</a>
+      <a href="aboutme.html"><i class="fa fa-fw fa-user"></i> Please Read</a>
       | - - - - - - - - - - - - - - Projects - - - - - - - - - - - - - - |
-      <a href="https://scythnentic.6ph1nx1s4.repl.co/"><i class="fa fa-fw fa-user"></i> Scythnentic (Old)</a>
-      <a href="kraken.html"><i class="fa fa-fw fa-user"></i> Kraken</a>
-      <a href="memory_crash.html"><i class="fa fa-fw fa-user"></i> MemCrash.html</a>
-      <a href="https://svhbutton.6ph1nx1s4.repl.co/"><i class="fa fa-fw fa-user"></i> SVH BUTTON 😱😱😱.. (Old)</a>
+      <a href="kraken.html"><i class="fa fa-fw fa-user"></i> Kraken (Still up)</a>
       | + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - + |
       </ul>
     </div>
