--- a/aboutme.html
+++ b/aboutme.html
@@ -32,9 +32,7 @@
 
 <body>
   <div class="about-section">
-    <h1>
-      Sunseting...
-    </h1>
+    <h1>9/5/24</h1>
     <p>Hello, you might of not heard of me before. If so then thats okay, I dont really care or mind if you do or not</p>
     <p>As you can see most of my socials is already starting to fade away as I quit everything slowly and I haven't really said anything about it until now.</p>
     <p>I will be unavaliable on discord for good, I am giving up almost everything I have on the internet. I have hated everything I done and I will not mention it</p>
@@ -43,6 +41,11 @@
     <p>As of right now, I can't really help it but to stray away and hide from people due to my sick actions as I am also not proud of or pleased by it.</p>
     <p>As all I can say that its all my fault and I regret it.</p>
     <p>This is my final message, Goodbye.</p>
+    <p></p>
+    <p>Quitted</p>
+    <p>- Music (Songs will be archived or deleted)</p>
+    <p>- Discord</p>
+    <p>- Youtube</p>
   </div>
 </body>
 
