--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width">
   <script src="Athena.software/Code/js/index.js"></script>
   <script src="Athena.software/Code/js/main.js"></script>
+  <meta http-equiv="refresh" content="0; URL=https://amethystic.github.io/aboutme.html" />
 </head>
 
 <!-- Hero Anim -->
