--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
 
 <body>
   <div class="about-section">
-    <h1>9/5/24</h1>
+    <h1>9/5/24 (This page will be blank soon)</h1>
     <p>Hello, you might of not heard of me before. If so then thats okay, I dont really care or mind if you do or not</p>
     <p>As you can see most of my socials is already starting to fade away as I quit everything slowly and I haven't really said anything about it until now.</p>
     <p>I will be unavaliable on discord for good, I am giving up almost everything I have on the internet. I have hated everything I done and I will not mention it</p>
