--- a/aboutme.html
+++ b/aboutme.html
@@ -46,6 +46,7 @@
     <p>- Music (Songs will be archived or deleted)</p>
     <p>- Discord</p>
     <p>- Youtube</p>
+    <p>- Instagram (Thanks for that one)</p>
   </div>
 </body>
 
