--- a/aboutme.html
+++ b/aboutme.html
@@ -42,11 +42,12 @@
     <p>As all I can say that its all my fault and I regret it.</p>
     <p>This is my final message, Goodbye.</p>
     <p></p>
-    <p>Quitted</p>
+    | - - - Quitted - - - |
     <p>- Music (Songs will be archived or deleted)</p>
     <p>- Discord</p>
     <p>- Youtube</p>
     <p>- Instagram (Thanks for that one)</p>
+    <p>- Twitter (Thx Deta for helping i never touched it)</p>
   </div>
 </body>
 
