--- a/aboutme.html
+++ b/aboutme.html
@@ -8,60 +8,16 @@
   <link href="Athena.software/Code/css/text.css" rel="stylesheet" type="text/css" />
   <link href="Athena.software/Code/css/aboutme.css" rel="stylesheet" type="text/css" />
   <link href="Athena.software/Code/css/buttonpack.css" rel="stylesheet" type="text/css" />
-  <audio src="Athena.software/audio/goodnight.mp3" autoplay loop></audio>
+  <audio src="Athena.software/audio/message.mp3" autoplay loop></audio>
   <img src="favicon.ico" alt="Logo" hidden>
   <script src="Athena.software/Code/js/about.js"></script>
 </head>
 
 <!-- Hero Anim -->
-
-<body>
-  <div class="hero">
-    <div class="title">
-      <h1></h1>
-      <div class="back-text">
-        <span>V</span>
-        <span>a</span>
-        <span>l</span>
-      </div>
-    </div>
-  </div>
-</body>
-
-<!-- hi -->
-
+<div class="bg"></div>
 <body>
   <div class="about-section">
-    <h1>9/5/24 (This page will be blank soon)</h1>
-    <p>Hello, you might of not heard of me before. If so then thats okay, I dont really care or mind if you do or not</p>
-    <p>As you can see most of my socials is already starting to fade away as I quit everything slowly and I haven't really said anything about it until now.</p>
-    <p>I will be unavaliable on discord for good, I am giving up almost everything I have on the internet. I have hated everything I done and I will not mention it</p>
-    <p>As you can see if u haven't got the gist "CorpHell" 1 - 3 was all vent songs of me hating my recent jobs and money sucks in general</p>
-    <p>I have not been doing mentally and financially well anyways and I have been causing my family issues that I am deeply sorry for, It will never happen again after this.</p>
-    <p>As of right now, I can't really help it but to stray away and hide from people due to my sick actions as I am also not proud of or pleased by it.</p>
-    <p>As all I can say that its all my fault and I regret it.</p>
-    <p>This is my final message, Goodbye.</p>
-    <p></p>
-    | - - - Quitted - - - |
-    <p>- Music (Songs will be archived or deleted)</p>
-    <p>- Discord</p>
-    <p>- Youtube</p>
-    <p>- Instagram (Thanks for that one)</p>
-    <p>- Twitter (Thx Deta for helping i never touched it)</p>
+    <h1>This site is now pwned by the one and only Valhallium, it will never come back.</h1>
   </div>
 </body>
-
-<!-- the script thing to animate the name -->
-
-<body>
-  <script>
-    let spanTexts = document.getElementsByTagName("span");
-    window.onload = function () {
-      for (spanTexts of spanTexts) {
-        spanTexts.classList.add("active");
-      }
-    }
-  </script>
-</body>
-
 </html>
