--- a/kraken.html
+++ b/kraken.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="refresh" content="0; URL=https://amethystic.github.io/aboutme.html" />
   <link href="Athena.software/Code/css/crackware.css" rel="stylesheet" type="text/css" />
   <link href="Athena.software/Code/css/navbar.css" rel="stylesheet" type="text/css" />
   <link href="Athena.software/Code/css/text.css" rel="stylesheet" type="text/css" />
